--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
                 </div>
             </div>
         </section>
+
+        <section class="contenedor-2">
+            <div class="c2-img">
+                <video src="./assets/img/restaurant-promotion-video-arcadian-cafe.mp4" alt=""  autoplay controls muted></video>
+            </div>
+
+            <div class="c2-contenido">
+                <h3>Descubrí</h3>
+                <h2>nuestra propuesta</h2>
+                <span>.</span>
+                <p>Lorem, ipsum color sit amet consectetur adipisicing elit. Quos, cupiditate debitis? Reiciendis vitae doloribus numquam a cumque ex, veritatis accusamus eligendi nisi sint totam, autem fugit, unde tempora.</p>
+            </div>
+        </section>
+
+        <section class="contenedor-3">
+            <div class="c3-contenido">
+                <h2>Lorem ipsum color.</h2>
+                <h3>Lorem ip</h3>
+            </div>
+        </section>
     </main>
 </body>
 </html>
