fin de 27 del 02

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <h2>nuestra propuesta</h2>
                 <span>.</span>
                 <p>Lorem, ipsum color sit amet consectetur adipisicing elit. Quos, cupiditate debitis? Reiciendis vitae doloribus numquam a cumque ex, veritatis accusamus eligendi nisi sint totam, autem fugit, unde tempora.</p>
+                <a href="#" class="btn">+ Información</a>
             </div>
         </section>
 
@@ -65,6 +66,7 @@
                 <h2>otra experiencia</h2>
                 <span>.</span>
                 <p>Lorem, ipsum color sit amet consectetur adipisicing elit. Quos, cupiditate debitis? Reiciendis vitae doloribus numquam a cumque ex, veritatis accusamus eligendi nisi sint totam, autem fugit, unde tempora.</p>
+                <a href="#" class="btn">+ Información</a>
             </div>
             
             <div class="c4-grid">
@@ -94,6 +96,7 @@
                     <h2>otra experiencia</h2>
                     <span>.</span>
                     <p>Lorem, ipsum color sit amet consectetur adipisicing elit. Quos, cupiditate debitis? Reiciendis vitae doloribus numquam a cumque ex, veritatis accusamus eligendi nisi sint totam, autem fugit, unde tempora.</p>
+                    <a href="#" class="btn">+ Información</a>
            
             </div>
         </section>
