--- a/index.html
+++ b/index.html
@@ -100,6 +100,30 @@
            
             </div>
         </section>
+
+        <section class="contenedor-6">
+            <div class="c6-nosotros">
+                <h2>Nosotros</h2>
+                <span>.</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ratione temporibus eius aliquid quia, perferendis ad necessitatibus consequuntur esse accusantium nobis assumenda culpa eaque cum.
+                </p>
+            </div>
+            <div class="c6-contacto">
+                <div class="redes">
+                    <h2>seguinos</h2>
+                    <div class="img-redes">
+                        <img src="./assets/img/facebook.svg" alt="">
+                        <img src="./assets/img/instagram.svg" alt="">
+                        <img src="./assets/img/twitter.svg" alt="">
+                    </div>
+                </div>
+                <div class="mail">
+                    <h2>Escribinos</h2>
+                    <a href="#" class="btn1">Enviar E-mail</a>
+                </div>
+
+            </div>
+        </section>
     </main>
 </body>
 </html>
